--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
         <!-- 描述区域 -->
         <div class="description">
-            这里是 知性小方块 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
+            此页面用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
         </div>
 
         <!-- 按钮区域 -->
