--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             border-radius: 10px;
             margin-bottom: 25px;
             font-size: 14px;
+            text-align: left;
             color: #5a6c7d;
             border-left: 4px solid #3498db;
         }
@@ -126,17 +127,17 @@
         }
 
         .btn-tencent {
-            background: linear-gradient(45deg, #0084ff, #00a2ff);
+            background: linear-gradient(45deg, #54aafb, #5bbef7);
             color: white;
         }
 
         .btn-telegram {
-            background: linear-gradient(45deg, #0088cc, #00a8e8);
+            background: linear-gradient(45deg, #51b8eb, #4cc2f0);
             color: white;
         }
 
         .btn-email {
-            background: linear-gradient(45deg, #ea4335, #fbbc05);
+            background: linear-gradient(45deg, #f05b4d, #eac34d);
             color: white;
         }
 
@@ -182,7 +183,7 @@
 
         .link-btn {
             padding: 10px 20px;
-            background: linear-gradient(45deg, #2ecc71, #27ae60);
+            background: linear-gradient(45deg, #03e863, #34915b);
             color: white;
             border: none;
             border-radius: 50px;
