--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         }
 
         .btn-email {
-            background: linear-gradient(45deg, #f05b4d, #eac34d);
+            background: linear-gradient(45deg, #fa7164, #eac34d);
             color: white;
         }
 
@@ -155,7 +155,7 @@
             font-size: 18px;
             font-weight: bold;
             margin-bottom: 15px;
-            color: #c0392b;
+            color: #fa1a01;
             display: flex;
             align-items: center;
             gap: 8px;
@@ -183,7 +183,7 @@
 
         .link-btn {
             padding: 10px 20px;
-            background: linear-gradient(45deg, #03e863, #34915b);
+            background: linear-gradient(45deg, #34a2fc, #76b8e4);
             color: white;
             border: none;
             border-radius: 50px;
@@ -206,7 +206,7 @@
             border-radius: 8px;
             margin-bottom: 20px;
             font-size: 13px;
-            color: #2980b9;
+            color: #fd7b02;
             border-left: 4px solid #3498db;
         }
 
@@ -306,7 +306,7 @@
 
         <!-- 描述区域 -->
         <div class="description">
-            此页面用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
+            此页面用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么此页面可以帮你快速找到最新频道或交流群。
         </div>
 
         <!-- 按钮区域 -->
