--- a/index.html
+++ b/index.html
@@ -330,8 +330,16 @@
         <!-- 友情链接区域 -->
         <div class="links-section">
             <button class="link-btn"
+                onclick="window.open('https://ym.kashijiehaoka.cn/?s=sNeWIXgH420078', '_blank')">
+                免费领取官方正规大流量卡
+            </button>
+            <button class="link-btn"
+                onclick="window.open('./AppleStore限免应用汇总.html', '_blank')">
+                Applestore应用每日限免汇总
+            </button>
+            <button class="link-btn"
                 onclick="window.open('https://gh-proxy.com/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json', '_blank')">
-                TVBOX 本站订阅
+                本站维护 TVBOX 订阅源
             </button>
             <button class="link-btn"
                 onclick="window.open('https://www.microsoft.com/software-download/windows11', '_blank')">
