--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 官方正规大流量卡
             </button>
             <button class="link-btn"
-                onclick="window.open('./AppleStore限免应用汇总.html', '_blank')">
+                onclick="window.open('./AppleStore.html', '_blank')">
                 AppleStore应用每日限免
             </button>
             <button class="link-btn"
