--- a/index.html
+++ b/index.html
@@ -512,13 +512,13 @@
                 <i class="fas fa-link"></i> 友情链接
             </div>
             <div class="buttons">
-                <a href="Apple Store限免.html" class="btn btn-apple">
+                <a href="/Apple Store限免.html" class="btn btn-apple">
                     <i class="fas fa-apple-alt"></i> AppleStore每日限免
                 </a>
-                <a href="DownloadHub应用中心.html" class="btn btn-store">
+                <a href="/DownloadHub应用中心.html" class="btn btn-store">
                     <i class="fas fa-store-alt"></i> DownHub应用中心
                 </a>
-                <a href="账号密码批量生成器.html" class="btn btn-password">
+                <a href="/账号密码批量生成器.html" class="btn btn-password">
                     <i class="fas fa-user-shield"></i> 账号密码批量生成器
                 </a>
                 <a href="https://gh-proxy.org/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json" class="btn btn-tvbox">
