--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                 <a href="https://www.microsoft.com/zh-cn/software-download/windows11" class="btn btn-windows">
                     <i class="fab fa-windows"></i> Windows11镜像下载
                 </a>
-                <a href="https://next.itellyou.cn/" class="btn btn-msdn">
+                <a href="https://msdn.itellyou.cn/" class="btn btn-msdn">
                     <i class="fas fa-laptop-code"></i> MSDN原版软件资源
                 </a>
             </div>
