--- a/index.html
+++ b/index.html
@@ -548,10 +548,8 @@
                 <i class="fas fa-info-circle"></i> 说明
             </div>
             <ul class="notice-list">
-                <li>加群说明：原创破解和收集花费大量时间精力，不为爱发电。加入频道第一时间阅读公告，避免违规被踢出频道。</li>
-                <li>赞助成员群：提供多类资源，包括Android软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库App资源合集等。</li>
-                <li>普通交流群：纯闲聊交流社群，无资源分享，仅用于交流学习，禁止分享资源！</li>
-                <li>VIP赞助群：在QQ频道私信频道主完成赞助，频道主会第一时间审核并拉入赞助群。</li>
+                <li>加群说明：加入频道或群聊第一时间阅读公告，避免违规被踢出频道。纯闲聊交流社群，无资源分享，仅用于交流学习，禁止分享资源！</li>
+                <li>赞助成员群：提供多类资源，包括Android软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库App资源合集等；原创破解和收集花费大量时间精力，不为爱发电，在QQ频道私信频道主完成赞助，频道主会第一时间审核并拉入赞助群。</li>
             </ul>
         </div>
 
