--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             </div>
             <div class="buttons">
                 <a href="/Apple Store限免.html" class="btn btn-apple">
-                    <i class="fas fa-apple-alt"></i> AppleStore每日限免 
+                    <i class="fas fa-apple-alt"></i> AppleStore每日限免
                 </a>
                 <a href="/DownloadHub应用中心.html" class="btn btn-store">
                     <i class="fas fa-store-alt"></i> DownHub应用中心
@@ -521,7 +521,8 @@
                 <a href="/账号密码批量生成器.html" class="btn btn-password">
                     <i class="fas fa-user-shield"></i> 账号密码批量生成器
                 </a>
-                <a href="https://gh-proxy.org/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json" class="btn btn-tvbox">
+                <a href="https://gh-proxy.org/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json"
+                    class="btn btn-tvbox">
                     <i class="fas fa-file-alt"></i> TVBOX视频订阅源¹
                 </a>
                 <a href="https://gitee.com/bin1site/tv/raw/master/OS.json" class="btn btn-tvbox">
@@ -548,8 +549,9 @@
                 <i class="fas fa-info-circle"></i> 说明
             </div>
             <ul class="notice-list">
-                <li>加群说明：加入频道或群聊第一时间阅读公告，避免违规被踢出频道。纯闲聊交流社群，无资源分享，仅用于交流学习，禁止分享资源！</li>
-                <li>赞助成员群：提供多类资源，包括Android软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库App资源合集等；原创破解和收集花费大量时间精力，不为爱发电，在QQ频道私信频道主完成赞助，频道主会第一时间审核并拉入赞助群。</li>
+                <li><b>加群说明：</b>加入频道或群聊第一时间阅读公告，避免违规被踢出频道。纯闲聊交流社群，无资源分享，仅用于交流学习，禁止分享资源！</li>
+                <li><b>赞助成员群：</b>提供多类资源，包括Android软件、Windows/Office密钥、VPN软件、软件激活码、教程资料、软件库App资源合集等；原创破解和收集花费大量时间精力，不为爱发电，在QQ频道私信频道主完成赞助，频道主会第一时间审核并拉入赞助群。
+                </li>
             </ul>
         </div>
 
