--- a/index.html
+++ b/index.html
@@ -508,10 +508,10 @@
                 <i class="fas fa-link"></i> 友情链接
             </div>
             <div class="buttons">
-                <a href="/Apple Store限免.html" class="btn btn-apple">
+                <a href="https://oss.dinduan.com/view.php/870e8e8d4508c4c3934ab0ba3788e967.png" class="btn btn-apple">
                     <i class="fas fa-apple-alt"></i> AppleStore每日限免
                 </a>
-                <a href="/DownloadHub应用中心.html" class="btn btn-store">
+                <a href="https://oss.dinduan.com/view.php/870e8e8d4508c4c3934ab0ba3788e967.png" class="btn btn-store">
                     <i class="fas fa-store-alt"></i> DownHub应用中心
                 </a>
                 <a href="/账号密码批量生成器.html" class="btn btn-password">
