--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <i class="fas fa-exclamation-triangle"></i> 提示：
             </div>
             <ul class="notice-list">
-                <li>此页面长期维护和更新，强烈建议收藏保存！</li>
+                <li>此页面长期维护更新，建议收藏保存！</li>
             </ul>
         </div>
 
