--- a/index.html
+++ b/index.html
@@ -507,7 +507,16 @@
             <div class="section-title">
                 <i class="fas fa-link"></i> 友情链接
             </div>
-            <div class="buttons">
+            <div class="buttons"><!--
+                <a href="https://oss.dinduan.com/view.php/870e8e8d4508c4c3934ab0ba3788e967.png" class="btn btn-apple">
+                    <i class="fas fa-apple-alt"></i> AppleStore每日限免
+                </a>
+                <a href="https://oss.dinduan.com/view.php/870e8e8d4508c4c3934ab0ba3788e967.png" class="btn btn-store">
+                    <i class="fas fa-store-alt"></i> DownHub应用中心
+                </a>
+                <a href="/账号密码批量生成器.html" class="btn btn-password">
+                    <i class="fas fa-user-shield"></i> 账号密码批量生成器
+                </a> -->
                 <a href="https://gh-proxy.org/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json"
                     class="btn btn-tvbox">
                     <i class="fas fa-file-alt"></i> TVBOX视频订阅源¹
