--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- 头部区域 -->
         <div class="header">
             <div class="avatar">
-                <img src="https://oss.dinduan.com/view.php/c0cc299e4bd0df89f0ca02a02e1825d6.jpg" alt="头像" />
+                <img src="logo.jpg" alt="头像" />
             </div>
             <div class="name">知性小方块</div>
             <div class="quote">"保持好奇，持续学习，不断成长"</div>
