--- a/index.html
+++ b/index.html
@@ -81,15 +81,9 @@
                 <a href="https://oss.dinduan.com/view.php/870e8e8d4508c4c3934ab0ba3788e967.png" class="btn btn-store">
                     <i class="fas fa-store-alt"></i> DownHub应用中心
                 </a>
-                <a href="/账号密码批量生成器.html" class="btn btn-password">
-                    <i class="fas fa-user-shield"></i> 账号密码批量生成器
-                </a>
                 <a href="https://gh-proxy.org/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json"
                     class="btn btn-tvbox">
                     <i class="fas fa-file-alt"></i> TVBOX视频订阅源¹
-                </a>
-                <a href="https://gitee.com/bin1site/tv/raw/master/OS.json" class="btn btn-tvbox">
-                    <i class="fas fa-file-code"></i> TVBOX视频订阅源²
                 </a>
                 <a href="https://haokale.cn/h5/?code=Cp2owEN3" class="btn btn-card">
                     <i class="fas fa-cart-plus"></i> 0元官方正规大流量卡¹
@@ -97,11 +91,8 @@
                 <a href="https://ym.kashijiehaoka.cn/?s=sNeWIXgH420078" class="btn btn-card">
                     <i class="fas fa-paper-plane"></i> 0元官方正规大流量卡²
                 </a>
-                <a href="https://www.microsoft.com/zh-cn/software-download/windows11" class="btn btn-windows">
-                    <i class="fab fa-windows"></i> Windows11镜像下载
-                </a>
-                <a href="https://msdn.itellyou.cn/" class="btn btn-msdn">
-                    <i class="fas fa-laptop-code"></i> MSDN原版软件资源
+                <a href="https://www.microsoft.com/zh-cn/software-download/" class="btn btn-windows">
+                    <i class="fab fa-windows"></i> Windows镜像下载
                 </a>
             </div>
         </div>
