--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- 链接区域 -->
         <div class="section">
             <div class="section-title">
-                <i class="fas fa-link"></i> 社群链接
+                <i class="fas fa-link"></i> 联系站长
             </div>
             <div class="buttons">
                 <a href="https://pd.qq.com/s/9oir7qw0g" class="btn btn-tencent">
@@ -54,17 +54,17 @@
                 <a href="https://t.me/CostCodeNote" class="btn btn-telegram">
                     <i class="fab fa-telegram-plane"></i> Telegram频道
                 </a>
-                <a href="https://github.com/bin1site1" class="btn btn-github">
-                    <i class="fab fa-github"></i> GitHub项目
-                </a>
                 <a href="mailto:246822487@qq.com" class="btn btn-email">
                     <i class="fas fa-envelope"></i> Email联系邮箱
                 </a>
                 <a href="https://xhslink.com/m/2Llr5INJeli" class="btn btn-redbook">
                     <i class="fas fa-book-open"></i> 关注UP小红书
                 </a>
-                <a href="http://www.coolapk.com/u/36167165" class="btn btn-coolapk">
-                    <i class="fas fa-mobile-alt"></i> 关注UP酷安
+                <a href="https://haokale.cn/h5/?code=Cp2owEN3" class="btn btn-card">
+                    <i class="fas fa-cart-plus"></i> 0元官方正规大流量卡¹
+                </a>
+                <a href="https://ym.kashijiehaoka.cn/?s=sNeWIXgH420078" class="btn btn-card">
+                    <i class="fas fa-paper-plane"></i> 0元官方正规大流量卡²
                 </a>
             </div>
         </div>
@@ -84,15 +84,6 @@
                 <a href="https://gh-proxy.org/raw.githubusercontent.com/bin1site1/bin1site1.github.io/refs/heads/main/OS.json"
                     class="btn btn-tvbox">
                     <i class="fas fa-file-alt"></i> TVBOX视频订阅源¹
-                </a>
-                <a href="https://haokale.cn/h5/?code=Cp2owEN3" class="btn btn-card">
-                    <i class="fas fa-cart-plus"></i> 0元官方正规大流量卡¹
-                </a>
-                <a href="https://ym.kashijiehaoka.cn/?s=sNeWIXgH420078" class="btn btn-card">
-                    <i class="fas fa-paper-plane"></i> 0元官方正规大流量卡²
-                </a>
-                <a href="https://www.microsoft.com/zh-cn/software-download/" class="btn btn-windows">
-                    <i class="fab fa-windows"></i> Windows镜像下载
                 </a>
             </div>
         </div>
